[gd_scene load_steps=3 format=3 uid="uid://dn501fyhls61"]

[ext_resource type="Script" path="res://Items/Script/collectibles.gd" id="1_3hjke"]
[ext_resource type="Texture2D" uid="uid://c53w10wnuwjr5" path="res://icon.svg" id="1_46lm2"]

[node name="Collectibles" type="Area2D"]
collision_layer = 128
script = ExtResource("1_3hjke")
collectable_data = [1, "res://icon.svg", null, null, "collectable", "collectable"]

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_46lm2")

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Notifier" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_entered" from="Notifier" to="." method="_on_notifier_screen_entered"]
